--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <h1>Hello world!</h1>
     <p>This is the first file in my new Git Repo.</p>
     <p>A new line in our file</p>
+    <div style="text-align: center;">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Apple_Computer_Logo_rainbow.svg" alt="ImagenPruebaLogApple" 
+        style="width: 100%; max-width: 960px; max-height: 500px; ">
+    </div>
 </body>
 </html>
